# hypermodernpython

./: .coverage  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  coverage.sh  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  script
.github/workflows/: tests.yml
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt
elpa/gnupg/: S.gpg-agent  S.gpg-agent.browser  S.gpg-agent.extra  S.gpg-agent.ssh  pubring.kbx  pubring.kbx~  trustdb.gpg
src/hypermodern_python/: __init__.py  console.py  prettier.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
