[tool.poetry]
name = "hypermodern-python"
version = "0.2.0"
description = "My python modern config"
authors = ["Duk <songkhoi123@gmail.com>"]
license = "MIT"
homepage = "https://github.com/duksosleepy/hypermodern-python"
repository = "https://github.com/duksosleepy/hypermodern-python"
keywords = ["hypermodern"]
documentation = "https://hypermodern-python.readthedocs.io"


[tool.poetry.dependencies]
python = "^3.12"
safety-db = "^2021.7.17"
desert = "^2022.9.22"
marshmallow = "^3.19.0"
codecov = "^2.1.13"
httpx = "^0.27.0"
jsonargparse = {extras = ["all"], version = "^4.32.0"}
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1.0"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mypy = "^1.0.1"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
xdoctest = "^1.1.1"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.22"
codecov = "^2.1.12"


[tool.coverage.paths]
source = ["src", "*/site-packages"]


[tool.coverage.run]
branch = true
source = ["hypermodern_python"]


[tool.coverage.report]
fail_under = 100


[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
preview = true


[tool.pyright]
venvPath="C:/Users/THAY PHACH/AppData/Local/pypoetry/Cache/virtualenvs"
venv="hypermodern-python-o4Cs2Vq1-py3.11"


[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
